tests/pos-custom-args/i10383.scala
def r = BigInt(1) to BigInt(3) // error
